--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "colors":["#98FB98", "#FF0000"],
+  "colors":["#FFF1F0", "#F5222D"],
   "content":[
     {
       "title": ["Grundsicherung gesamte Bevölkerung"],
