--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "colors":["#FFF1F0", "#F5222D"],
+  "colors":["#F4F5F9", "#213A8F"],
   "content":[
     {
       "title": ["Grundsicherung gesamte Bevölkerung"],
