--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "colors":["#F4F5F9", "#213A8F"],
+  "colors":["#6cb2df", "#213A8F", "#E60032"],
   "content":[
     {
       "title": ["Grundsicherung gesamte Bevölkerung"],
