--- a/config.json
+++ b/config.json
@@ -43,7 +43,7 @@
         {
           "title": ["Grundsicherung im Alter"],
           "nav": ["Im Alter"],
-          "description": ["Diese Karte zeigt den Anteil in % der deutschen Empfänger*innen (ab 65 Jahren) von Grundsicherung bezogen auf die gleich strukturierte Bevölkerungsgruppe auf Kiezebene (sogenannte Planungsräume der LORs - Lebensweltlich orientierten Räume).<br> <br>Wie auf der Karte dargestellt, erhalten <br>beispielsweise 10,16% aller Einwohner*innen ab 65 Jahren und mit einem deutschen Pass im LOR “Rehberge” Grundsicherung im Alter.</b>"],
+          "description": ["Diese Karte zeigt den Anteil in % der deutschen Empfänger*innen (ab 65 Jahren) von Grundsicherung bezogen auf die gleich strukturierte Bevölkerungsgruppe auf Kiezebene (sogenannte Planungsräume der LORs - Lebensweltlich orientierten Räume).<br><br> Wie auf der Karte dargestellt, erhalten <b>beispielsweise 10,16% aller Einwohner*innen ab 65 Jahren und mit einem deutschen Pass im LOR “Rehberge” Grundsicherung im Alter.</b>"],
           "type": "geojson",
           "data": "xii.geojson",
           "attribute": "ab 65 Jahre Deutsche",
